# CINI

./: .clang-format  CMakeLists.txt  README.md  README_zh.md
src/core/: cini.c  cini.h
src/example/: main.c
src/test/: ctest_define.h  ctest_item.c  ctest_item.h  main.c
